[gd_scene load_steps=4 format=2]

[ext_resource path="res://2-Scripts/enemigo.gd" type="Script" id=1]
[ext_resource path="res://3-Tiles/enemigo.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 80 )

[node name="Enemigo" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AreaDeteccion" type="Area2D" parent="."]

[node name="ColisionDeteccion" type="CollisionShape2D" parent="AreaDeteccion"]
shape = SubResource( 1 )

[node name="RayCenter" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2( 1, 0 )
cast_to = Vector2( 0, 0 )

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2( -1, 0 )
cast_to = Vector2( 0, 0 )

[connection signal="area_entered" from="AreaDeteccion" to="." method="_on_AreaDeteccion_area_entered"]
[connection signal="area_exited" from="AreaDeteccion" to="." method="_on_AreaDeteccion_area_exited"]
